# llpc

./: .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitmodules  .typos.toml  CMakeLists.txt  LICENSE  Makefile.apillpc  README.md
compilerutils/: CMakeLists.txt
compilerutils/lib/: ArgPromotion.cpp  CompilerUtils.cpp  DxilToLlvm.cpp  IRSerializationUtils.cpp  MbStandardInstrumentations.cpp  ModuleBunch.cpp  PassRegistry.inc  TypeLowering.cpp  TypesMetadata.cpp  ValueOriginTracking.cpp  ValueOriginTrackingTestPass.cpp  ValueOriginTrackingTestPass.h  ValueSpecialization.cpp  ValueSpecializationTestPass.cpp  ValueSpecializationTestPass.h
compilerutils/plugin/: CMakeLists.txt  Plugin.cpp
compilerutils/test/: CMakeLists.txt  link-control-flow.ll  link-existing-global-name.ll  link-fold-const.ll  link-func-metadata.ll  link-global-initializer.ll  link-global-same-struct.ll  link-global-same-type.ll  link-simple.ll  lit.cfg.py  lit.site.cfg.py.in
gfxruntime/: CMakeLists.txt
gfxruntime/src/: GfxRuntimeLibrary.cpp
gfxruntime/tools/: CompileAdvancedBlendShader.py
imported/cwpack/: CMakeLists.txt
imported/metrohash/: CMakeLists.txt
lgc/: CMakeLists.txt
lgc/builder/: ArithBuilder.cpp  Builder.cpp  BuilderBase.cpp  BuilderContext.cpp  BuilderImpl.cpp  BuilderImpl.h  BuilderImplArith.cpp  BuilderImplDesc.cpp  BuilderImplImage.cpp  BuilderImplInOut.cpp  BuilderImplMatrix.cpp  BuilderImplMisc.cpp  BuilderImplSubgroup.cpp  BuilderRecorder.cpp  BuilderRecorder.h  BuilderReplayer.cpp  DescBuilder.cpp  ImageBuilder.cpp  InOutBuilder.cpp  MatrixBuilder.cpp  MiscBuilder.cpp  PipelineState.cpp  PipelineState.h  ResourceUsage.cpp  ResourceUsage.h  ShaderModes.cpp  SubgroupBuilder.cpp  TargetInfo.h  YCbCrAddressHandler.cpp  YCbCrAddressHandler.h  YCbCrConverter.cpp  YCbCrConverter.h  llpcBuilder.cpp  llpcBuilderBase.cpp  llpcBuilderContext.cpp  llpcBuilderImpl.cpp  llpcBuilderImpl.h  llpcBuilderImplArith.cpp  llpcBuilderImplDesc.cpp  llpcBuilderImplImage.cpp  (+16 more)
lgc/disassembler/: CMakeLists.txt  Disassembler.cpp  PalMetadataRegs.cpp
lgc/docs/: LgcOverview.md
lgc/elfLinker/: ColorExportShader.cpp  ColorExportShader.h  ElfLinker.cpp  ElfLinkerImpl.h  ElfLinkerShaderDbg.cpp  FetchShader.cpp  FetchShader.h  GlueShader.cpp  GlueShader.h  NullFragmentShader.cpp  NullFragmentShader.h  RelocHandler.cpp  RelocHandler.h
lgc/lowering/: AddBufferOperationMetadata.cpp  AddLoopMetadata.cpp  ApplyWorkarounds.cpp  CheckShaderCache.cpp  CollectImageOperations.cpp  CollectResourceUsage.cpp  CombineCooperativeMatrix.cpp  ConfigBuilderBase.cpp  ConfigBuilderBase.h  Continufy.cpp  EmitShaderHashToken.cpp  FragmentColorExport.cpp  GenerateCopyShader.cpp  GenerateNullFragmentShader.cpp  GenerateNullFragmentShader.h  IncludeLlvmIr.cpp  InitializeUndefInputs.cpp  InitializeWorkgroupMemory.cpp  LgcLowering.cpp  LowerBufferOperations.cpp  LowerCooperativeMatrix.cpp  LowerDebugPrintf.cpp  LowerDesc.cpp  LowerGpuRt.cpp  LowerImageDerivatives.cpp  LowerInOut.cpp  LowerInvariantLoads.cpp  LowerMulDx9Zero.cpp  LowerPopsInterlock.cpp  LowerPopsInterlock.h  LowerRayQueryWrapper.cpp  LowerRayQueryWrapper.h  LowerReadFirstLane.cpp  LowerSubgroupOps.cpp  MeshTaskShader.cpp  MeshTaskShader.h  MutateEntryPoint.cpp  NggPrimShader.cpp  NggPrimShader.h  PassRegistry.inc  (+14 more)
lgc/patch/: Abi.h  AbiMetadata.h  AddLoopMetadata.cpp  ApplyWorkarounds.cpp  CheckShaderCache.cpp  CodeGenManager.cpp  CodeGenManager.h  CollectImageOperations.cpp  CollectResourceUsage.cpp  CombineCooperativeMatrix.cpp  ConfigBuilderBase.cpp  ConfigBuilderBase.h  Continufy.cpp  FragColorExport.cpp  FragColorExport.h  FragmentColorExport.cpp  GenerateCopyShader.cpp  GenerateNullFragmentShader.cpp  GenerateNullFragmentShader.h  Gfx6Chip.cpp  Gfx6Chip.h  Gfx6ConfigBuilder.cpp  Gfx6ConfigBuilder.h  Gfx9Chip.cpp  Gfx9Chip.h  Gfx9ConfigBuilder.cpp  Gfx9ConfigBuilder.h  IncludeLlvmIr.cpp  InitializeWorkgroupMemory.cpp  IntrinsDefs.h  LgcLowering.cpp  LowerBufferOperations.cpp  LowerCooperativeMatrix.cpp  LowerDebugPrintf.cpp  LowerDesc.cpp  LowerGpuRt.cpp  LowerImageDerivatives.cpp  LowerInOut.cpp  LowerInvariantLoads.cpp  LowerMulDx9Zero.cpp  (+120 more)
lgc/state/: Compiler.cpp  Defs.h  GpurtDialect.cpp  LgcContext.cpp  LgcDialect.cpp  PalMetadata.cpp  PassManagerCache.cpp  PipelineShaders.cpp  PipelineShaders.h  PipelineState.cpp  PipelineState.h  RayTracingLibrarySummary.cpp  ResourceUsage.cpp  RuntimeContext.cpp  ShaderModes.cpp  ShaderStage.cpp  ShaderStage.h  TargetInfo.cpp
lgc/test/: CMakeLists.txt  CallLibFromCs-indirect.lgc  CallLibFromCs.lgc  CallLibFromCsPayload.lgc  CallLibFromFs.lgc  CallLibFromVs.lgc  CleanUndefOutputValues.lgc  ComputeLibraryPushConstantSpill.lgc  CsBPermuteWave64.lgc  CsBuiltIns.lgc  CsBuiltInsNext.lgc  CsComputeLibrary.lgc  CsComputeLibraryPayload.lgc  CsLowerDebugPrintf.lgc  CsReconfigWorkgroup.lgc  ElfRelocationAndNote.lgc  ElfRelocationSize.lgc  FDot2Gfx1010.lgc  FetchShaderSingleInput.lgc  MulDx9Zero.lgc  (+74 more)
llpc/: CMakeLists.txt  Makefile.apicompilerllpc
llvmraytracing/: .gitignore  CMakeLists.txt  README.md
test/: CMakeLists.txt  README.md  lit.cfg.py  lit.site.cfg.py.in  query_gfxip.py  run_amber.py  run_amber_test.py  testShaders.py
util/: CMakeLists.txt  extensions.txt  generate_strings.py  llpcBinaryStream.h  llpcDebug.cpp  llpcDebug.h  llpcElf.cpp  llpcElf.h  llpcElfReader.cpp  llpcElfReader.h  llpcElfWriter.cpp  llpcElfWriter.h  llpcEmuLib.cpp  llpcEmuLib.h  llpcFile.cpp  llpcFile.h  llpcInternal.cpp  llpcInternal.h  llpcMetroHash.h  llpcPassDeadFuncRemove.cpp  llpcPassDeadFuncRemove.h  llpcPassExternalLibLink.cpp  llpcPassExternalLibLink.h  llpcPassLoopInfoCollect.cpp  llpcPassLoopInfoCollect.h  llpcPassLoopUnrollInfoRectify.cpp  llpcPassLoopUnrollInfoRectify.h  llpcPassManager.cpp  llpcPassManager.h  llpcPassNonNativeFuncRemove.cpp  llpcPipelineDumper.cpp  llpcPipelineDumper.h  llpcPipelineShaders.cpp  llpcPipelineShaders.h  llpcShaderModuleHelper.cpp  llpcShaderModuleHelper.h  llpcStartStopTimer.cpp  llpcTimerProfiler.cpp  llpcTimerProfiler.h  llpcUtil.cpp  (+9 more)
version/: CMakeLists.txt
(+4512 files in other folders)
